# BMW_robotics_task

./: .clang-format  .gitignore  Dockerfile  README.md  task_description.md
.github/workflows/: CI.yml
src/customized_interfaces/: CMakeLists.txt  package.xml
src/customized_interfaces/srv/: ImageProcess.srv
src/hello_task/: CMakeLists.txt  package.xml
src/hello_task/config/: sine_wave_param.yaml
src/hello_task/launch/: sine_wave_launch.launch.py
src/hello_task/src/: grayscale_client.cpp  grayscale_server.cpp  hello_task_publisher.cpp  hello_task_subscriber.cpp
src/hello_task/test/: basic_test.cpp
task_ws/src/hello_task/launch/: sine_wave_launch.launch.py
